admission/ValidatingAdmissionPolicy/policies/privileged/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-ephemeralcontainers
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test privileged-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/privileged/ephemeralcontainers/deny-kubectl-debug-custom.yaml
